<resources>
    <string name="app_name">Ichos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="username_lbl">Username:</string>
    <string name="login">Login</string>
    <string name="password_lbl">Password:</string>
    <string name="password">Password</string>
    <string name="login_error">Invalid username or password</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="record">Record</string>
    <string name="stopRecord">Stop Recording</string>
    <string name="play">Play</string>
    <string name="chartPlaceholder">Chart/Graph Placeholder Image</string>

    <string name="ichosLogo">Ichos Logo</string>

    <string name="register">Register</string>
    <string name="stopPlaying">Stop Playing</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_filters">Update Filters</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="sort_by">Sort by:</string>

    <string name="wav_label">Audio Analysis</string>
    <string name="amplitude_label">Amplitude</string>

    <string name="amplituda_label">Amplituda</string>
    <string name="freq_label">Frequency (Hz)</string>
    <string name="fft_label">FFT Analysis</string>
</resources>